--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="asset/candi.jpg" class="d-block w-100" alt="candi">
+      <img src="candi.jpg" class="d-block w-100" alt="candi">
       <div class="carousel-caption text-start">
         <h1>Judul headline berita 1</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="asset/malioboro.jpg" class="d-block w-100" alt="malioboro">
+      <img src="malioboro.jpg" class="d-block w-100" alt="malioboro">
       <div class="carousel-caption text-start">
         <h1>Judul headline berita 2</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="asset/olahraga.jpg" class="d-block w-100" alt="olahraga">
+      <img src="olahraga.jpg" class="d-block w-100" alt="olahraga">
       <div class="carousel-caption text-start">
         <h1>Judul headline berita 3</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="carousel-item">
-      <img src="asset/pantai.jpg" class="d-block w-100" alt="pantai">
+      <img src="pantai.jpg" class="d-block w-100" alt="pantai">
       <div class="carousel-caption text-start">
         <h1>Judul headline berita 4</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -87,7 +87,7 @@
       </div>
     </div>
 <div class="carousel-item">
-      <img src="asset/politik.jpg" class="d-block w-100" alt="politik">
+      <img src="politik.jpg" class="d-block w-100" alt="politik">
       <div class="carousel-caption text-start">
         <h1>Judul headline berita 5</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
